[package]
name = "url-scraper"
version = "0.1.0"
description = "Simple HTML URL scraper"
repository = "https://github.com/pop-os/url-scraper"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["url", "scraper"]
categories = ["web-programming"]

[dependencies]
reqwest = "0.9.2"
scraper = "0.7.0"